# Applied-Automation-Feeding-project

./: MJDATA.TXT  README.md  flake.nix  pyproject.toml  reqs.txt  requirements.txt
assets/cranfield_assembly_benchmark/: Cranfield.stp  cranfield_assembly_benchmark.xml
assets/franka_emika_panda/: hand.xml
assets/gelsight_mini/: gelsight_mini.xml  scene.xml
assets/gelsight_mini/assets/: gsmini_shell_ch.stl  (+4 more)
assets/google_barkour_vb/: scene_hfield_mjx.xml  scene_mjx.xml
assets/mjx_shadow_hand/: right_hand.xml
assets/props/: cable.xml  feeder.xml  flange_tool.xml  flexcell_top.xml  flexcell_top_mjx.xml  mounting_plate.xml  part.xml
assets/rgmc_practice_task_board_2020/: task_board.xml  task_board.xml.backup  task_board_mjx.xml
assets/robotiq_hande/: hande.xml  scene.xml
assets/shadow_hand/: finger.xml  left_hand.xml  mjx_finger.xml  mjx_right_hand.xml  mjx_shadow_hand.xml  rh.xml  right_hand.xml  scene_left.xml  scene_right.xml  shadow_hand.urdf  shadow_hand.xml  shadow_rh.xml
assets/universal_robots_ur5e/: ur5e.xml
scenes/: control_ur5e.xml  disassembly.xml  empty.xml  pick_and_place.xml  shadow_hand_pick_and_place.xml  test_scene.xml
sims/: __init__.py  base_sim.py  cable_weaving.py  diffik_ur5e.py  dmp_cartesian_ur5e.py  feeder.py  finger.py  finger_gating.py  gelsight_mini.py  hande.py  mjx_in_hand_manipulation.py  new_shadow_hand.py  opspace_ur5e.py  panda_cable_weaving.py  pick_and_place_ur5e.py  shadow_hand_cable_following.py  shadow_hand_ik.py  shadow_hand_pick_and_place.py
utils/: args.py  learning.py  math.py  mj.py  mjx.py  physics.py
(+166 files in other folders)
